Revision history for Perl extension Test-Compile

v2.1.2    2019-XX-XX              (Evan Giles <egiles@cpan.org>)
    - More corrections to the POD

v2.1.1    2019-07-01              (Evan Giles <egiles@cpan.org>)
    - Correct the POD

v2.1.0    2019-06-29              (Evan Giles <egiles@cpan.org>)
    - Update copyright
    - Add all_pm_files_ok() and all_pl_files_ok() methods to the internal class

v2.0.1    2019-06-18              (Evan Giles <egiles@cpan.org>)
    - Export most of the old functions (CPAN-RT 129888)

v2.0_0    2019-06-18
    Łukasz Hejnak <lehack@lehack.pl>
    - Replaced import() with Exporter usage.
    - Added all_files_ok to the procedural mode.
    - Added .git to list of directories ignored when looking for pm/pl files.
    - Added an else clause for pl_file_compiles so that it catches file not found errors.
    Evan Giles <egiles@cpan.org>
    - Remove 'exported_to' function
    - Remove cleanup steps from the Build.PL file
    - Bump version number for backwards incompatible changes (semver.org)

v1.3.0    2015-09-24              (Evan Giles <egiles@cpan.org>)
    - Announce the deprecation the procedural functions (long overdue)

v1.2.2    UNRELEASED              (Evan Giles <egiles@cpan.org>)
    - Remove the 'use 5.6.2' statements, they cause warnings.
    - Fix some spelling errors
    - Move the xt tests into the main test directory
    - Protect against strange PERL5LIB chars (CPAN-RT 104614)

v1.2.1    2014-12-09              (Evan Giles <egiles@cpan.org>)
    - Fix (skip where appropriate) failing CPAN test
    - Avoid warnings for empty files in all_pl_files (Nigel Gregoire)

v1.2.0    2014-08-08              (Evan Giles <egiles@cpan.org>)
    - Files without extension may not be perl (rt83917)
    - Small POD fix

v1.1.0    2014-07-18              (Evan Giles <egiles@cpan.org>)
    - Allow use of Test::Compile in an object oriented manner
    - Promote the OO interface in the POD