@@ -24,4 +24,17 @@ like($files[2],qr/t.scripts.perlscript/,'Found script: perlscript');
 like($files[3],qr/t.scripts.subdir.success.pl/,'Found script: success.pl');
 like($files[4],qr/t.scripts.taint.pl/,'Found script: taint.pl');
 
+# Try specifying som files rather than directories
+my @search = ('t/scripts/failure.pl', 't/scripts/Module.pm');
+
+@files = sort $internal->all_pl_files($search[0]);
+is(scalar @files,1,"found the specific pl file");
+
+@files = sort $internal->all_pl_files($search[1]);
+is(scalar @files,0,"didn't find the specific pm file");
+
+@files = sort $internal->all_pl_files(@search);
+is(scalar @files,1,"only found one specific file");
+like($files[0],qr/t.scripts.failure.pl/,'Found specific file: failure.pl');
+
 $internal->done_testing();
