@@ -2,6 +2,7 @@ Revision history for Perl extension Test-Compile
 
 v2.1.2    2019-XX-XX              (Evan Giles <egiles@cpan.org>)
     - More corrections to the POD
+    - More tests, try specifying specific files to all_pX_files()
 
 v2.1.1    2019-07-01              (Evan Giles <egiles@cpan.org>)
     - Correct the POD
